As logged in user I want to delete property [Delivers #183687092]
